# Project-NUMERICAL-LINEAR-ALGEBRA-challenge-1

./: CMakeLists.txt  Lab1a_IntroBash_sol.md  LukeChallenge1.cpp  README.md  SetUp  attempt1.cpp  challenge1.cpp  code2.cpp  girlsCode.cpp  jacobi.cpp  lis-2.1.3.tgz  lis.git  richiesta1.cpp  richiesta2.cpp
Tutorial_Course/: Lab1b_IntroEigen_sol.md  Lab3.cpp  Lab4_IterSolPrecond.md
